--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-cli-plugin-quasar": "^3.0.2",
     "vue-resource": "^1.5.3",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
