--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
+    "tar": "^6.1.11",
     "vue": "^2.6.11",
     "vue-cli-plugin-quasar": "^3.0.2",
     "vue-resource": "^1.5.3",
