--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "axios": "^0.25.0",
     "core-js": "^3.6.5",
     "quasar": "^1.0.0",
+    "sweetalert": "^2.1.2",
     "tar": "^6.1.11",
     "vue": "^2.6.11",
     "vue-cli-plugin-quasar": "^3.0.2",
+    "vue-jwt-decode": "^0.1.0",
     "vue-resource": "^1.5.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.6.2"
